--- a/snow.html
+++ b/snow.html
@@ -1,9 +1,8 @@
 <html>
-<style type="text/css">
-body{
-    background: url(http://like-autumnn-leaves.tumblr.com/post/37527472653) no-repeat rbg(30,30,30) fixed center
-    center;
-    background-size: contain;
-}
-</style>
+	<style type="text/css">
+		body {
+			background: url(http://www.dataplusscience.com/files/200.gif) no-repeat rgb(30,30,30) fixed center center;
+			background-size: contain;
+			}
+	</style>
 </html>
