--- a/snow.html
+++ b/snow.html
@@ -1,8 +1,3 @@
 <html>
-	<style type="text/css">
-		body {
-			background: url(http://www.dataplusscience.com/files/200.gif) no-repeat rgb(30,30,30) fixed center center;
-			background-size: contain;
-			}
-	</style>
+hello world
 </html>
