--- a/snow.html
+++ b/snow.html
@@ -1,3 +1,8 @@
 <html>
-hello world
+	<style type="text/css">
+		body {
+			background: url(http://www.dataplusscience.com/files/200.gif) no-repeat rgb(30,30,30) fixed center center;
+			background-size: contain;
+			}
+	</style>
 </html>
