--- a/snow.html
+++ b/snow.html
@@ -1,7 +1,7 @@
 <html>
 	<style type="text/css">
 		body {
-			background: url(https://c.tenor.com/-rty244kLDAAAAAC/falling-snow.gif) no-repeat rgb(30,30,30) fixed center center;
+			background: url(https://thumbs.gfycat.com/AdoredWindingIberianbarbel-max-1mb.gif) no-repeat rgb(30,30,30) fixed center center;
 			background-size: contain;
 			}
 	</style>
