--- a/snow2.html
+++ b/snow2.html
@@ -1,7 +1,7 @@
 <html>
 	<style type="text/css">
 		body {
-			background: url(https://c.tenor.com/O7AZ5-jc46EAAAAC/snow-day-snow-party.gif) no-repeat rgb(30,30,30) fixed center center;
+			background: url(https://static.wixstatic.com/media/cd9b9b_36910f7eda0b45bbbcfee561066bac60~mv2.gif) no-repeat rgb(30,30,30) fixed center center;
 			background-size: contain;
 			}
 	</style>
