--- a/snow2.html
+++ b/snow2.html
@@ -2,7 +2,7 @@
 	<style type="text/css">
 		body {
 			background: url(https://static.wixstatic.com/media/cd9b9b_36910f7eda0b45bbbcfee561066bac60~mv2.gif) no-repeat rgb(30,30,30) fixed center center;
-			background-size: contain;
+			background-size: cover;
 			}
 	</style>
 </html>
